- fix alignmet on product page

--- a/public/product_specific/product_specific.scss
+++ b/public/product_specific/product_specific.scss
@@ -17,7 +17,7 @@
         border-radius: 20px;
         display: flex;
         flex-direction: column;
-
+        justify-content: center;
         h2{
             text-align: start;
             margin-block: 0.5rem;
